2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>

	* viengoos.c (parse_args): Use `strtol' instead of `atoi'.

	* object.h: Include <hurd/error.h> instead of <error.h>.

	* cap-lookup.c: Unconditionally use `S_PUTCHAR' and `S_PRINTF' instead
	of `s_putchar' and `s_printf' and remove the latters' prototypes.

	* Makefile.am: Rework system of build flags for the test programs.

2008-05-29  Neal H. Walfield  <neal@gnu.org>

	* as.c: Include <hurd/exceptions.h>.
	(ensure_stack): Change SPACE to be EXCEPTION_STACK_SIZE - PAGESIZE
	bytes large.  Write to each page.
	* cap-lookup.c: Include <hurd/exceptions.h>.
	(ensure_stack): Change SPACE to be EXCEPTION_STACK_SIZE - PAGESIZE
	bytes large.  Write to each page.

	* zalloc.c (ZONE_SIZE): Add suffix the 1 with a U type qualifier.
	(ZONES): Include one less zone.

2008-05-28  Neal H. Walfield  <neal@gnu.org>

	* object.c (object_find_soft): Also claim the object if
	ODESC->EVICTION_CANDIDATE is true.

2008-05-28  Neal H. Walfield  <neal@gnu.org>

	* pager.c (pager_collect): Correctly parenthesize the use of <<.

2008-05-28  Neal H. Walfield  <neal@gnu.org>

	* pager.c (pager_collect): Don't just consider the first-level
	activities, walk the activity hierarchy to find the victim.

2008-05-28  Neal H. Walfield  <neal@gnu.org>

	* cap-lookup.c (slot_lookup_rel): Don't take parameter type.  Pass
	-1 to lookup in its place.
	* server.c (server_loop): Update use of slot_lookup_rel to be
	consistent with new API.
	* t-as.c (try): Likewise.
	(test): Likewise.

2008-05-28  Neal H. Walfield  <neal@gnu.org>

	* cap-lookup.c (lookup): If a cappage is read-only, only bail if
	TYPE is not weak.

2008-05-28  Neal H. Walfield  <neal@gnu.org>

	* viengoos.c (ager_start): Increase the stack size.

2008-05-28  Neal H. Walfield  <neal@gnu.org>

	* object.c (folio_object_alloc): Set CAP's policy to POLICY.

2008-05-28  Neal H. Walfield  <neal@gnu.org>

	* cap-lookup.c (lookup): Don't update WRITABLE if the designated